--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,9 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/PopDancer.js"></script>
+  <script src="src/BouncyDancer.js"></script>
+  <script src="src/bigDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
